--- a/public/adaptiveMenu/adaptiveMenu.css
+++ b/public/adaptiveMenu/adaptiveMenu.css
@@ -25,14 +25,14 @@
     display: block;
     height: 56px;
     font-weight: bold;
-    color: #fff;
+    color: black;
     font-size: 14px;
     line-height: 56px;
     text-align: center;
     text-transform: uppercase;
     text-decoration: none;
     background-color: lightgray;
-    transition: background-color 0.1s linear, color 0.1s linear;
+    /*transition: background-color 0.1s linear, color 0.1s linear;*/
     color: black;
 }
 
