--- a/templates/_adaptiveMenu.html.twig
+++ b/templates/_adaptiveMenu.html.twig
@@ -2,9 +2,9 @@
 {% block stylesheets %}
 
     <link rel="stylesheet" href="/adaptiveMenu/adaptiveMenu.css">
-    {#<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"#}
-          {#crossorigin="anonymous">#}
-    {#<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>#}
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
+          crossorigin="anonymous">
+    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
 {% endblock %}
 
