--- a/public/adaptiveMenu/adaptiveMenu.css
+++ b/public/adaptiveMenu/adaptiveMenu.css
@@ -11,13 +11,17 @@
     background-color: #333;
     position: relative;
 }
+
+span {
+    font-weight: 900;
+}
+
+
 .nav {
     width: 100%;
-    /*box-shadow: inset 0 5px rgba(0, 0, 0, 0.5);*/
-
     position: absolute;
     top: 100%;
-    left: 0;
+    left: 0%;
     z-index: 100;
     display: none;
 }
@@ -25,24 +29,22 @@
     display: block;
     height: 56px;
     font-weight: bold;
-    color: black;
+    color: white;
     font-size: 14px;
     line-height: 56px;
     text-align: center;
     text-transform: uppercase;
     text-decoration: none;
-    background-color: lightgray;
-    /*transition: background-color 0.1s linear, color 0.1s linear;*/
-    color: black;
+    background-color: #333;
 }
 
-.nav__item:not(:first-of-type) {
-    border-top: 1px solid rgba(255, 255, 255, 0.2);
-}
+/*.nav__item:not(:first-of-type) {*/
+    /*border-top: 1px solid rgba(255, 255, 255, 0.2);*/
+/*}*/
 
-.nav__item:not(:last-of-type) {
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-}
+/*.nav__item:not(:last-of-type) {*/
+    /*border-bottom: 1px solid rgba(0, 0, 0, 0.2);*/
+/*}*/
 
 
 .nav__item:last-of-type {
@@ -85,3 +87,4 @@
 .nav-burger__checkbox:checked ~ .nav {
     display: block;
 }
+
